#279: Refactored application-backend & application-ui modules from FFI to unnamed pipes IPC