@@ -5,7 +5,11 @@ import com.github.yoep.popcorn.backend.adapters.video.listeners.VideoListener;
 import com.github.yoep.popcorn.backend.adapters.video.state.VideoState;
 import com.github.yoep.popcorn.backend.info.ComponentState;
 import com.github.yoep.popcorn.backend.info.SimpleComponentDetails;
+import com.github.yoep.popcorn.ui.IoC;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
 import java.util.concurrent.atomic.AtomicReference;
@@ -13,7 +17,10 @@ import java.util.concurrent.atomic.AtomicReference;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 class VideoInfoServiceTest {
+    @Mock
+    private IoC ioc;
     private VideoInfoService service;
 
     private final AtomicReference<VideoListener> listenerHolder = new AtomicReference<>();
@@ -31,8 +38,9 @@ class VideoInfoServiceTest {
         when(video.getName()).thenReturn(name);
         when(video.getDescription()).thenReturn(description);
         when(video.getVideoState()).thenReturn(VideoState.READY);
+        when(ioc.getInstances(VideoPlayback.class)).thenReturn(Collections.singletonList(video));
 
-        service = new VideoInfoService(Collections.singletonList(video));
+        service = new VideoInfoService(ioc);
 
         var result = service.getComponentDetails();
         assertEquals(1, result.size());
@@ -51,13 +59,15 @@ class VideoInfoServiceTest {
             listenerHolder.set(invocation.getArgument(0, VideoListener.class));
             return null;
         }).when(video).addListener(isA(VideoListener.class));
-        service = new VideoInfoService(Collections.singletonList(video));
+        when(ioc.getInstances(VideoPlayback.class)).thenReturn(Collections.singletonList(video));
+        service = new VideoInfoService(ioc);
+
+        var componentDetails = service.getComponentDetails();
 
         var listener = listenerHolder.get();
         listener.onStateChanged(VideoState.ERROR);
 
-        var result = service.getComponentDetails();
-        assertEquals(1, result.size());
-        assertEquals(ComponentState.ERROR, result.get(0).getState());
+        assertEquals(1, componentDetails.size());
+        assertEquals(ComponentState.ERROR, componentDetails.getFirst().getState());
     }
 }
